--- a/css/components.css
+++ b/css/components.css
@@ -2,6 +2,7 @@
 nav {
     position: relative;
     width: 100%;
+    height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -72,9 +73,8 @@ nav {
 
 /* footer styles */
 footer {
-    position: relative;
-    width: 100%;
     position: fixed;
+    width: 100%;
     bottom: 0;
     display: flex;
     justify-content: center;
