--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,6 @@
 main {
     width: 100%;
-    height: 85vh;
+    height: 82vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
