--- a/css/popular.css
+++ b/css/popular.css
@@ -1,43 +1,41 @@
 main {
-    width: 100%;
-    height: 85vh;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    padding: 50px 0;
+    gap: 2rem;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 5rem;
 }
 
 
-
-.title {
-    font-size: var(--fs-h1);
-    color: lightskyblue;
+.show {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    gap: 3rem;
+.cover {
+    width: 75px;
+    height: 100px;
 }
 
-.show {
-    cursor: pointer;
+.title {
+    font-size: var(--fs-md);
 }
 
-.show-img {
-    width: 150px;
-    height: 225px;
+.sub {
+    font-size: var(--fs-sm);
 }
-
 
 .rating {
     display: flex;
+    font-size: .6rem;
     align-items: center;
-    font-size: var(--fs-sm);
     gap: .3rem;
+    justify-content: center;
 }
-
 .star {
     width: 20px;
 }
